[gd_scene load_steps=3 format=2]

[ext_resource path="res://prefabs/componentes/scripts/AreaDanoUnitario.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="AreaDanoUnitarioTropa" type="Area2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_AreaDanoUnitario_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_AreaDanoUnitario_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
